--- a/bbt.bib
+++ b/bbt.bib
@@ -413,7 +413,7 @@
   title         = {An {{Introduction}} to {{Quantum Programming}} in {{Quipper}}},
   year          = {2013},
   editor        = {Dueck, Gerhard W. and Miller, D. Michael},
-  month         = apr,
+  month         = jul,
   pages         = {110--124},
   publisher     = {{Springer Berlin Heidelberg}},
   series        = {Lecture {{Notes}} in {{Computer Science}}},
@@ -499,6 +499,7 @@
   journal       = {Parallel Computing},
   title         = {{{ScaffCC}}: {{Scalable Compilation}} and {{Analysis}} of {{Quantum Programs}}},
   year          = {2015},
+  month         = jun,
   pages         = {2--17},
   volume        = {45},
   abstract      = {We present ScaffCC, a scalable compilation and analysis framework based on LLVM (Lattner and Adve, 2004), which can be used for compiling quantum computing applications at the logical level. Drawing upon mature compiler technologies, we discuss similarities and differences between compilation of classical and quantum programs, and adapt our methods to optimizing the compilation time and output for the quantum case. Our work also integrates a reversible-logic synthesis tool in the compiler to facilitate coding of quantum circuits. Lastly, we present some useful quantum program analysis scenarios and discuss their implications, specifically with an elaborate discussion of timing analysis for critical path estimation. Our work focuses on bridging the gap between high-level quantum algorithm specifications and low-level physical implementations, while providing good scalability to larger and more interesting problems.},
@@ -668,9 +669,9 @@
 
 @unpublished{Paykin2019,
   author        = {Paykin, Jennifer and Zdancewic, Steve},
-  note          = {Talk at Quantum Physics and Logic, Chapman University, June 2019},
+  note          = {Talk at Quantum Physics and Logic, Chapman University},
   title         = {A {{HoTT Quantum Equational Theory}} ({{Extended Version}})},
-  month         = apr,
+  month         = jun,
   year          = {2019},
   abstract      = {This paper presents an equational theory for the QRAM model of quantum computation, formulated as an embedded language inside of homotopy type theory. The embedded language approach is highly expressive, and reflects the style of state-of-the art quantum languages like Quipper and QWIRE. The embedding takes advantage of features of homotopy type theory to encode unitary transformations as higher inductive paths, simplifying the presentation of an equational theory. We prove that this equational theory is sound and complete with respect to established models of quantum computation.},
   eprint        = {1904.04371},
