Add missing months

--- a/bbt.bib
+++ b/bbt.bib
@@ -13,12 +13,13 @@
   eprint        = {quant-ph/0402130}
 }
 
-@misc{Aleksandrowicz2019,
+@misc{Aleksandrowicz2017,
   author       = {Aleksandrowicz, Gadi and Alexander, Thomas and Barkoutsos, Panagiotis and Bello, Luciano and {Ben-Haim}, Yael and Bucher, David and {Cabrera-Hern{\'a}ndez}, Francisco Jose and {Carballo-Franquis}, Jorge and Chen, Adrian and Chen, Chun-Fu and Chow, Jerry M. and {C{\'o}rcoles-Gonzales}, Antonio D. and Cross, Abigail J. and Cross, Andrew and {Cruz-Benito}, Juan and Culver, Chris and Gonz{\'a}lez, Salvador De La Puente and Torre, Enrique De La and Ding, Delton and Dumitrescu, Eugene and Duran, Ivan and Eendebak, Pieter and Everitt, Mark and Sertage, Ismael Faro and Frisch, Albert and Fuhrer, Andreas and Gambetta, Jay and Gago, Borja Godoy and {Gomez-Mosquera}, Juan and Greenberg, Donny and Hamamura, Ikko and Havlicek, Vojtech and Hellmers, Joe and Herok, {\L}ukasz and Horii, Hiroshi and Hu, Shaohan and Imamichi, Takashi and Itoko, Toshinari and {Javadi-Abhari}, Ali and Kanazawa, Naoki and Karazeev, Anton and Krsulich, Kevin and Liu, Peng and Luh, Yang and Maeng, Yunho and Marques, Manoel and {Mart{\'i}n-Fern{\'a}ndez}, Francisco Jose and McClure, Douglas T. and McKay, David and Meesala, Srujan and Mezzacapo, Antonio and Moll, Nikolaj and Rodr{\'i}guez, Diego Moreda and Nannicini, Giacomo and Nation, Paul and Ollitrault, Pauline and O'Riordan, Lee James and Paik, Hanhee and P{\'e}rez, Jes{\'u}s and Phan, Anna and Pistoia, Marco and Prutyanov, Viktor and Reuter, Max and Rice, Julia and Davila, Abd{\'o}n Rodr{\'i}guez and Rudy, Raymond Harry Putra and Ryu, Mingi and Sathaye, Ninad and Schnabel, Chris and Schoute, Eddie and Setia, Kanav and Shi, Yunong and Silva, Adenilton and Siraichi, Yukio and Sivarajah, Seyon and Smolin, John A. and Soeken, Mathias and Takahashi, Hitomi and Tavernelli, Ivano and Taylor, Charles and Taylour, Pete and Trabing, Kenso and Treinish, Matthew and Turner, Wes and {Vogt-Lee}, Desiree and Vuillot, Christophe and Wildstrom, Jonathan A. and Wilson, Jessica and Winston, Erick and Wood, Christopher and Wood, Stephen and W{\"o}rner, Stefan and Akhalwaya, Ismail Yunus and Zoufal, Christa},
   howpublished = {Zenodo},
   abstract     = {Qiskit is an open-source framework for working with noisy quantum computers at the level of pulses, circuits, and algorithms. https://qiskit.org},
   title        = {Qiskit: {{An}} Open-Source Framework for Quantum Computing},
-  year         = {2018},
+  year         = {2017},
+  month =  mar,
   doi          = {10.5281/zenodo.2562110},
   url          = {https://github.com/Qiskit/qiskit},
   timestamp    = {2021-04-18}
@@ -46,6 +47,7 @@
   publisher = {{Cambridge University Press}},
   title     = {The {{Quantum IO Monad}}},
   year      = {2009},
+  month =  nov,
   address   = {{Cambridge}},
   editor    = {Mackie, Ian and Gay, Simon},
   isbn      = {978-0-521-51374-6},
@@ -81,6 +83,7 @@
   title     = {Towards Large-Scale Functional Verification of Universal Quantum Circuits},
   abstract  = {We introduce a framework for the formal specification and verification of quantum circuits based on the Feynman path integral. Our formalism, built around exponential sums of polynomial functions, provides a structured and natural way of specifying quantum operations, particularly for quantum implementations of classical functions. Verification of circuits over all levels of the Clifford hierarchy with respect to either a specification or reference circuit is enabled by a novel rewrite system for exponential sums with free variables. Our algorithm is further shown to give a polynomial-time decision procedure for checking the equivalence of Clifford group circuits. We evaluate our methods by performing automated verification of optimized Clifford+T circuits with up to 100 qubits and thousands of T gates, as well as the functional verification of quantum algorithms using hundreds of qubits. Our experiments culminate in the automated verification of the Hidden Shift algorithm for a class of Boolean functions in a fraction of the time it has taken recent algorithms to simulate.},
   year      = {2019},
+  month =  jan,
   editor    = {Selinger, Peter and Chiribella, Giulio},
   pages     = {1--21},
   publisher = {{Open Publishing Association}},
@@ -96,6 +99,7 @@
   title     = {Quantum Alternation: {{Prospects}} and Problems},
   abstract  = {We propose a notion of quantum control in a quantum programming language which permits the superposition of finitely many quantum operations without performing a measurement. This notion takes the form of a conditional construct similar to the IF statement in classical programming languages. We show that adding such a quantum IF statement to the QPL programming language simplifies the presentation of several quantum algorithms. This motivates the possibility of extending the denotational semantics of QPL to include this form of quantum alternation. We give a denotational semantics for this extension of QPL based on Kraus decompositions rather than on superoperators. Finally, we clarify the relation between quantum alternation and recursion, and discuss the possibility of lifting the semantics defined by Kraus operators to the superoperator semantics defined by Selinger.},
   year      = {2015},
+  month =  nov,
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
   pages     = {33--42},
   publisher = {{Open Publishing Association}},
@@ -105,12 +109,13 @@
   timestamp = {2021-04-18}
 }
 
-@incollection{Baez2011,
+@incollection{Baez2010,
   author        = {Baez, J. and Stay, M.},
   booktitle     = {New Structures for Physics},
   publisher     = {{Springer Berlin Heidelberg}},
   title         = {Physics, Topology, Logic and Computation: {{A}} Rosetta Stone},
-  year          = {2011},
+  year          = {2010},
+  month =  jul,
   address       = {{Berlin, Heidelberg}},
   editor        = {Coecke, Bob},
   isbn          = {978-3-642-12821-9},
@@ -189,6 +194,7 @@
   booktitle = {Programming Languages and Systems},
   title     = {An Automated Deductive Verification Framework for Circuit-Building Quantum Programs},
   year      = {2021},
+  month =  mar,
   address   = {{Cham}},
   editor    = {Yoshida, Nobuko},
   pages     = {148--177},
@@ -264,6 +270,7 @@
   publisher = {{Cambridge University Press}},
   title     = {Extended {{Measurement Calculus}}},
   year      = {2009},
+  month =  nov,
   address   = {{Cambridge}},
   editor    = {Mackie, Ian and Gay, Simon},
   isbn      = {978-0-521-51374-6},
@@ -273,12 +280,13 @@
   timestamp = {2021-04-18}
 }
 
-@misc{Developers2021,
-  author       = {Cirq Developers},
+@misc{Cirq2018,
+  author       = {{Cirq Developers}},
   howpublished = {Zenodo},
   note         = {See full list of authors on Github: https://github.com/quantumlib/Cirq/graphs/contributors},
   title        = {Cirq},
   year         = {2018},
+  month =  jul,
   abstract     = {Cirq is a Python library for writing, manipulating, and optimizing quantum circuits and running them against quantum computers and simulators.},
   doi          = {10.5281/zenodo.4062499},
   timestamp    = {2021-04-18},
@@ -305,6 +313,7 @@
   booktitle     = {Reversible Computation},
   title         = {A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper},
   year          = {2020},
+  month =  jul,
   address       = {{Cham}},
   editor        = {Lanese, Ivan and Rawski, Mariusz},
   pages         = {153--168},
@@ -362,6 +371,7 @@
   volume   = {16},
   number   = {4},
   year     = {2006},
+  month =  aug,
   doi      = {10.1017/S0960129506005378},
   url      = {http://www.dcs.gla.ac.uk/~simon/quantum/}
 }
@@ -373,7 +383,8 @@
   publisher = {Cambridge University Press},
   place     = {Cambridge},
   timestamp = {2021-04-18},
-  year      = {2009}
+  year      = {2009},
+  month =  nov
 }
 
 @phdthesis{Green2010,
@@ -489,6 +500,7 @@
 
   Our work is building a language and toolflow to answer such questions. This document describes the Scaffold programming language, its design goals, and related tools. Scaffold is a programming language for expressing quantum algorithms. A quantum algorithm can consist of a wide variety of components (including classical and quantum routines) which will be defined using different coding techniques. As a quantum programming language (QPL), Scaffold was formulated to make it easy to express an algorithm with so many disparate components in a clean and efficient manner. It is from this notion of ``putting things together'' that Scaffold derives its name.},
   year        = {2012},
+  month =  jun,
   institution = {{Princeton University}},
   timestamp   = {2021-04-18},
   url         = {https://www.cs.princeton.edu/research/techreps/TR-934-12}
@@ -557,6 +569,7 @@
   booktitle = {Computer {{Aided Verification}}},
   title     = {Formal {{Verification}} of {{Quantum Algorithms Using Quantum Hoare Logic}}},
   year      = {2019},
+  month =  jul,
   address   = {{Cham}},
   editor    = {Dillig, Isil and Tasiran, Serdar},
   pages     = {187--207},
@@ -587,6 +600,7 @@
   publisher = {{Cambridge University Press}},
   title     = {Quantum Computation and Quantum Information: 10th Anniversary Edition},
   year      = {2010},
+  month =  dec,
   address   = {{Cambridge}},
   doi       = {10.1017/CBO9780511976667},
   timestamp = {2021-04-18}
@@ -699,6 +713,7 @@
   title     = {{{QWIRE}} Practice: {{Formal}} Verification of Quantum Circuits in Coq},
   abstract  = {We describe an embedding of the QWIRE quantum circuit language in the Coq proof assistant. This allows programmers to write quantum circuits using high-level abstractions and to prove properties of those circuits using Coq's theorem proving features. The implementation uses higher-order abstract syntax to represent variable binding and provides a type-checking algorithm for linear wire types, ensuring that quantum circuits are well-formed. We formalize a denotational semantics that interprets QWIRE circuits as superoperators on density matrices, and prove the correctness of some simple quantum programs.},
   year      = {2018},
+  month =  feb,
   editor    = {Coecke, Bob and Kissinger, Aleks},
   pages     = {119--132},
   publisher = {{Open Publishing Association}},
@@ -720,6 +735,7 @@
 
   QWIRE is not merely a language for writing and verifying quantum circuits: it is a verified circuit description language. This means that the semantics of QWIRE circuits are verified in the Coq proof assistant. We also implement verified abstractions, like ancilla management and reversible circuit compilation. Finally, we turn QWIRE and Coq's abilities outwards, towards verifying popular quantum algorithms like quantum teleportation. We argue that this tool provides a solid foundation for research into quantum programming languages and formal verification going forward.},
   year      = {2018},
+  month =  nov,
   address   = {{Philadelphia, PA, USA}},
   note      = {Publicly Accessible Penn Dissertations. 3175},
   type      = {{{PhD Thesis}}},
@@ -773,6 +789,7 @@
   title     = {A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)},
   abstract  = {Quipper is a practical programming language for describing families of quantum circuits. In this paper, we formalize a small, but useful fragment of Quipper called Proto-Quipper-M. Unlike its parent Quipper, this language is type-safe and has a formal denotational and operational semantics. Proto-Quipper-M is also more general than Quipper, in that it can describe families of morphisms in any symmetric monoidal category, of which quantum circuits are but one example. We design Proto-Quipper-M from the ground up, by first giving a general categorical model of parameters and state. The distinction between parameters and state is also known from hardware description languages. A parameter is a value that is known at circuit generation time, whereas a state is a value that is known at circuit execution time. After finding some interesting categorical structures in the model, we then define the programming language to fit the model. We cement the connection between the language and the model by proving type safety, soundness, and adequacy properties.},
   year      = {2018},
+  month =  feb,
   editor    = {Coecke, Bob and Kissinger, Aleks},
   pages     = {164--178},
   publisher = {{Open Publishing Association}},
@@ -818,6 +835,8 @@
   booktitle = {Foundations of Software Science and Computation Structures},
   title     = {From Symmetric Pattern-Matching to Quantum Control},
   year      = {2018},
+  month =  apr,
+  doi = {10.1007/978-3-319-89366-2_19},
   address   = {{Cham}},
   editor    = {Baier, Christel and Dal Lago, Ugo},
   pages     = {348--364},
@@ -848,6 +867,7 @@
   booktitle = {Proceedings of the 7th {International Symposium} on {Functional} and {{Logic Programming}}},
   title     = {A {{Brief Survey}} of {{Quantum Programming Languages}}},
   year      = {2004},
+  month = apr,
   address   = {{Berlin, Heidelberg}},
   editor    = {Kameyama, Yukiyoshi and Stuckey, Peter J.},
   pages     = {1--6},
@@ -880,6 +900,7 @@
   publisher = {{Cambridge University Press}},
   title     = {Quantum {{Lambda Calculus}}},
   year      = {2009},
+  month =  nov,
   editor    = {Gay, Simon and Mackie, Ian},
   month     = nov,
   pages     = {135--172},
@@ -982,6 +1003,7 @@
   title         = {{{LIQUi}}|{$>$}: {{A Software Design Architecture}} and {{Domain}}-{{Specific Language}} for {{Quantum Computing}}},
   abstract      = {Languages, compilers, and computer-aided design tools will be essential for scalable quantum computing, which promises an exponential leap in our ability to execute complex tasks. LIQUi|> is a modular software architecture designed to control quantum hardware. It enables easy programming, compilation, and simulation of quantum algorithms and circuits, and is independent of a specific quantum architecture. LIQUi|> contains an embedded, domain-specific language designed for programming quantum algorithms, with F# as the host language. It also allows the extraction of a circuit data structure that can be used for optimization, rendering, or translation. The circuit can also be exported to external hardware and software environments. Two different simulation environments are available to the user which allow a trade-off between number of qubits and class of operations. LIQUi|> has been implemented on a wide range of runtimes as back-ends with a single user front-end. We describe the significant components of the design architecture and how to express any given quantum algorithm.},
   year          = {2014},
+  month =  feb,
   eprint        = {1402.4467},
   timestamp     = {2021-04-18},
   archiveprefix = {arxiv},
@@ -994,6 +1016,7 @@
   publisher = {{Cambridge University Press}},
   title     = {Predicate {{Transformer Semantics}} of {{Quantum Programs}}},
   year      = {2009},
+  month =  nov,
   address   = {{Cambridge}},
   editor    = {Mackie, Ian and Gay, Simon},
   isbn      = {978-0-521-51374-6},
@@ -1052,6 +1075,7 @@
   publisher = {{Morgan Kaufmann is an imprint of Elsevier}},
   title     = {Foundations of Quantum Programming},
   year      = {2016},
+  month =  mar,
   address   = {{Amsterdam}},
   isbn      = {978-0-12-802306-8},
   doi       = {10.1016/C2014-0-02660-3},
