--- a/bbt.bib
+++ b/bbt.bib
@@ -44,12 +44,13 @@
 @incollection{Altenkirch2009,
   author    = {Altenkirch, Thorsten and Green, Alexander S.},
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  crossref  = {Gay2009},
   publisher = {{Cambridge University Press}},
   title     = {The {{Quantum IO Monad}}},
   year      = {2009},
   month     = nov,
   address   = {{Cambridge}},
-  editor    = {Mackie, Ian and Gay, Simon},
+  editor    = {Gay, Simon and Mackie, Ian},
   isbn      = {978-0-521-51374-6},
   pages     = {173--205},
   abstract  = {The quantum IO monad is a purely functional interface to quantum programming implemented as a Haskell library. At the same time it provides a constructive semantics of quantum programming. The QIO monad separates reversible (i.e., unitary) and irreversible (i.e., probabilistic) computations and provides a reversible let operation (ulet), allowing us to use ancillas (auxiliary qubits) in a modular fashion. QIO programs can be simulated either by calculating a probability distribution or by embedding it into the IO monad using the random number generator. As an example we present a complete implementation of Shor's algorithm.5.1 IntroductionWe present an interface from a pure functional programming language, Haskell, to quantum programming: the quantum IO monad, and use it to implement Shor's factorization algorithm. The implementation of the QIO monad provides a constructive semantics for quantum programming, i.e., a functional program that can also be understood as a mathematical model of quantum computing. Actually, the Haskell QIO library is only a first approximation of such a semantics; we would like to move to a more expressive language that is also logically sound. Here we are thinking of a language such as Agda (Norell 2007), which is based on Martin L\"of's type theory. We have already investigated this approach of functional specifications of effects in a classical context (Swierstra and Altenkirch 2007, 2008; Swierstra 2008). At the same time the QIO monad provides a high-level interface to a hypothetical quantum computer.},
@@ -79,7 +80,7 @@
 
 @inproceedings{Amy2019a,
   author    = {Amy, Matthew},
-  booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic, Halifax, Canada, 3-7th June 2018},
+  booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic, Halifax, Canada, 3--7th June 2018},
   title     = {Towards Large-Scale Functional Verification of Universal Quantum Circuits},
   abstract  = {We introduce a framework for the formal specification and verification of quantum circuits based on the Feynman path integral. Our formalism, built around exponential sums of polynomial functions, provides a structured and natural way of specifying quantum operations, particularly for quantum implementations of classical functions. Verification of circuits over all levels of the Clifford hierarchy with respect to either a specification or reference circuit is enabled by a novel rewrite system for exponential sums with free variables. Our algorithm is further shown to give a polynomial-time decision procedure for checking the equivalence of Clifford group circuits. We evaluate our methods by performing automated verification of optimized Clifford+T circuits with up to 100 qubits and thousands of T gates, as well as the functional verification of quantum algorithms using hundreds of qubits. Our experiments culminate in the automated verification of the Hidden Shift algorithm for a class of Boolean functions in a fraction of the time it has taken recent algorithms to simulate.},
   year      = {2019},
@@ -95,7 +96,7 @@
 
 @inproceedings{Badescu2015,
   author    = {B{\u a}descu, Costin and Panangaden, Prakash},
-  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic, Oxford, {{U}}.{{K}}., July 15-17, 2015},
+  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic, Oxford, {{U}}.{{K}}., July 15--17, 2015},
   title     = {Quantum Alternation: {{Prospects}} and Problems},
   abstract  = {We propose a notion of quantum control in a quantum programming language which permits the superposition of finitely many quantum operations without performing a measurement. This notion takes the form of a conditional construct similar to the IF statement in classical programming languages. We show that adding such a quantum IF statement to the QPL programming language simplifies the presentation of several quantum algorithms. This motivates the possibility of extending the denotational semantics of QPL to include this form of quantum alternation. We give a denotational semantics for this extension of QPL based on Kraus decompositions rather than on superoperators. Finally, we clarify the relation between quantum alternation and recursion, and discuss the possibility of lifting the semantics defined by Kraus operators to the superoperator semantics defined by Selinger.},
   year      = {2015},
@@ -180,8 +181,9 @@
 @unpublished{Chareton2020,
   author        = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Beno{\^i}t},
   note          = {Extended version of: \href{http://dx.doi.org/10.1007/978-3-030-72019-3_6}{An Automated Deductive Verification Framework for Circuit-building Quantum Programs} presented at ESOP 2021},
+  crossref      = {Chareton2021},
   title         = {A {{Deductive Verification Framework}} for {{Circuit}}-Building {{Quantum Programs}}},
-  month         = mar,
+  month         = jul,
   year          = {2020},
   abstract      = {While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. Early attempts either suffer from the lack of automation or parametrized reasoning, or target high-level abstract algorithm description languages far from the current de facto consensus of circuit-building quantum programming languages. As a consequence, no significant quantum algorithm implementation has been currently verified in a scale-invariant manner. We propose Qbricks, the first formal verification environment for circuit-building quantum programs, featuring clear separation between code and proof, parametric specifications and proofs, high degree of proof automation and allowing to encode quantum programs in a natural way, i.e. close to textbook style. Qbricks builds on best practice of formal verification for the classical case and tailor them to the quantum case: we bring a new domain-specific circuit-building language for quantum programs, namely Qbricks-DSL, together with a new logical specification language Qbricks-Spec and a dedicated Hoare-style deductive verification rule named Hybrid Quantum Hoare Logic. Especially, we introduce and intensively build upon HOPS, a higher-order extension of the recent path-sum symbolic representation, used for both specification and automation. To illustrate the opportunity of Qbricks, we implement the first verified parametric implementations of several famous and non-trivial quantum algorithms, including the quantum part of Shor integer factoring (Order Finding - Shor-OF), quantum phase estimation (QPE) - a basic building block of many quantum algorithms, and Grover search. These breakthroughs were amply facilitated by the specification and automated deduction principles introduced within Qbricks.},
   timestamp     = {2021-04-18},
@@ -208,7 +210,7 @@
 @misc{Cirq2018,
   author       = {{Cirq Developers}},
   howpublished = {Zenodo},
-  note         = {See full list of authors on Github: https://github.com/quantumlib/Cirq/graphs/contributors},
+  note         = {See full list of authors on Github: \url{https://github.com/quantumlib/Cirq/graphs/contributors}},
   title        = {Cirq},
   year         = {2018},
   month        = jul,
@@ -280,12 +282,13 @@
 @incollection{Danos2009,
   author    = {Danos, Vincent and Kashefi, Elham and Panangaden, Prakash and Perdrix, Simon},
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  crossref  = {Gay2009},
   publisher = {{Cambridge University Press}},
   title     = {Extended {{Measurement Calculus}}},
   year      = {2009},
   month     = nov,
   address   = {{Cambridge}},
-  editor    = {Mackie, Ian and Gay, Simon},
+  editor    = {Gay, Simon and Mackie, Ian},
   isbn      = {978-0-521-51374-6},
   pages     = {235--310},
   abstract  = {AbstractMeasurement-based quantum computation (MBQC) has emerged as a new approach to quantum computation where the notion of measurement is the main driving force of computation. This is in contrast with the more traditional circuit model that takes unitary operations as fundamental. Among measurement-based quantum computation methods the recently introduced one-way quantum computer stands out as basic and fundamental. The key idea is to start from an entangled state and then use measurements and one-qubit unitaries, which may be dependent on the outcomes of measurements, to guide the computation. The main point is that one never has to perform unitaries on more than one qubit at a time after the initial preparation of an entangled state. The ``programs'' that one writes in this model are traditionally called ``patterns.''In this chapter, we develop a rigorous mathematical model underlying measurement-based quantum computation. We give syntax, operational semantics, denotational semantics, and an algebra of programs derived from the denotational semantics. We also present a rewrite theory and prove a general standardization theorem that allows all programs to be put in a semantically equivalent standard form. Standardization has far-reaching consequences: a new physical architecture based on performing all the entanglement in the beginning, parallelization by exposing the dependency structure of measurements, and expressiveness theorems.We use our general measurement calculus not just to formalize the one-way model but also several other measurement-based models, e.g., Teleportation, Phase, and Pauli models, and present compositional embeddings of them into and from the one-way model.},
@@ -406,7 +409,7 @@
   address       = {{New York, NY, USA}},
   month         = jun,
   pages         = {333--342},
-  publisher     = {{ACM}},
+  publisher     = {{Association for Computing Machinery}},
   series        = {{{PLDI}} '13},
   volume        = {48},
   abstract      = {The field of quantum algorithms is vibrant. Still, there is currently a lack of programming languages for describing quantum computation on a practical scale, i.e., not just at the level of toy problems. We address this issue by introducing Quipper, a scalable, expressive, functional, higher-order quantum programming language. Quipper has been used to program a diverse set of non-trivial quantum algorithms, and can generate quantum gate representations using trillions of gates. It is geared towards a model of computation that uses a classical computer to control a quantum device, but is not dependent on any particular model of quantum hardware. Quipper has proven effective and easy to use, and opens the door towards using formal methods to analyze quantum algorithms.},
@@ -455,7 +458,8 @@
 
 @unpublished{Hietala2019,
   author        = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
-  note          = {Talk at Quantum Physics and Logic, Chapman University, June 2019. Superseded by \href{http://dx.doi.org/10.1145/3434318}{A Verified Optimizer for Quantum Circuits}},
+  note          = {Talk at QPL '19. Superseded by \href{http://dx.doi.org/10.1145/3434318}{A Verified Optimizer for Quantum Circuits}},
+  crossref      = {Hietala2021},
   title         = {Verified {{Optimization}} in a {{Quantum Intermediate Representation}}},
   month         = apr,
   year          = {2019},
@@ -633,7 +637,7 @@
 
 @inproceedings{Paolini2019,
   author    = {Paolini, Luca and Roversi, Luca and Zorzi, Margherita},
-  booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications, Oxford, {{UK}}, 7-8 July 2018},
+  booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications, Oxford, {{UK}}, 7--8 July 2018},
   title     = {Quantum {{Programming Made Easy}}},
   year      = {2019},
   editor    = {Ehrhard, Thomas and Fern{\'a}ndez, Maribel and de Paiva, Valeria and {Tortora de Falco}, Lorenzo},
@@ -673,7 +677,7 @@
   address   = {{New York, NY, USA}},
   month     = jan,
   pages     = {846--858},
-  publisher = {{ACM}},
+  publisher = {{Association for Computing Machinery}},
   volume    = {52},
   doi       = {10.1145/3009837.3009894},
   isbn      = {978-1-4503-4660-3},
@@ -683,9 +687,9 @@
 
 @unpublished{Paykin2019,
   author        = {Paykin, Jennifer and Zdancewic, Steve},
-  note          = {Talk at Quantum Physics and Logic, Chapman University},
+  note          = {Talk at QPL '19},
   title         = {A {{HoTT Quantum Equational Theory}} ({{Extended Version}})},
-  month         = jun,
+  month         = apr,
   year          = {2019},
   abstract      = {This paper presents an equational theory for the QRAM model of quantum computation, formulated as an embedded language inside of homotopy type theory. The embedded language approach is highly expressive, and reflects the style of state-of-the art quantum languages like Quipper and QWIRE. The embedding takes advantage of features of homotopy type theory to encode unitary transformations as higher inductive paths, simplifying the presentation of an equational theory. We prove that this equational theory is sound and complete with respect to established models of quantum computation.},
   eprint        = {1904.04371},
@@ -709,7 +713,7 @@
 
 @inproceedings{Rand2018,
   author    = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
-  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic, Nijmegen, the Netherlands, 3-7 July 2017},
+  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic, Nijmegen, the Netherlands, 3--7 July 2017},
   title     = {{{QWIRE}} Practice: {{Formal}} Verification of Quantum Circuits in Coq},
   abstract  = {We describe an embedding of the QWIRE quantum circuit language in the Coq proof assistant. This allows programmers to write quantum circuits using high-level abstractions and to prove properties of those circuits using Coq's theorem proving features. The implementation uses higher-order abstract syntax to represent variable binding and provides a type-checking algorithm for linear wire types, ensuring that quantum circuits are well-formed. We formalize a denotational semantics that interprets QWIRE circuits as superoperators on density matrices, and prove the correctness of some simple quantum programs.},
   year      = {2018},
@@ -749,20 +753,23 @@
   title     = {Phantom {{Types}} for {{Quantum Programs}}},
   year      = {2018},
   month     = jan,
-  pages     = {2},
+  numpages  = {2},
   abstract  = {We explore the design space of using dependent types to type check and verify quantum circuits. We weigh the trade-offs between the expressivity of dependent types against the costs imposed by large proof terms. We propose lightweight dependent types, or phantom types, as a middle ground, which provide useful type information for programming while specifying the properties to be externally verified.},
   timestamp = {2021-04-18},
   url       = {https://popl18.sigplan.org/event/coqpl-2018-phantom-types-for-quantum-programs}
 }
 
-@article{Rand2019,
+@inproceedings{Rand2019,
   author     = {Rand, Robert and Paykin, Jennifer and Lee, Dong-Ho and Zdancewic, Steve},
-  journal    = {Electronic Proceedings in Theoretical Computer Science},
-  title      = {{{ReQWIRE}}: {{Reasoning}} about {{Reversible Quantum Circuits}}},
   year       = {2019},
   month      = jan,
-  pages      = {299--312},
+  title      = {{{ReQWIRE}}: {{Reasoning}} about {{Reversible Quantum Circuits}}},
+  editor     = {Selinger, Peter and Chiribella, Giulio},
+  booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic, Halifax, Canada, 3--7th June 2018},
+  series     = {Electronic Proceedings in Theoretical Computer Science},
   volume     = {287},
+  publisher  = {Open Publishing Association},
+  pages      = {299--312},
   abstract   = {Common quantum algorithms make heavy use of ancillae: scratch qubits that are initialized at some state and later returned to that state and discarded. Existing quantum circuit languages let programmers assert that a qubit has been returned to the |0{$>$} state before it is discarded, allowing for a range of optimizations. However, existing languages do not provide the tools to verify these assertions, introducing a potential source of errors. In this paper we present methods for verifying that ancillae are discarded in the desired state, and use these methods to implement a verified compiler from classical functions to quantum oracles.},
   doi        = {10.4204/EPTCS.287.17},
   shorttitle = {{{ReQWIRE}}},
@@ -785,7 +792,7 @@
 
 @inproceedings{Rios2018,
   author    = {Rios, Francisco and Selinger, Peter},
-  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic, Nijmegen, the Netherlands, 3-7 July 2017},
+  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic, Nijmegen, the Netherlands, 3--7 July 2017},
   title     = {A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)},
   abstract  = {Quipper is a practical programming language for describing families of quantum circuits. In this paper, we formalize a small, but useful fragment of Quipper called Proto-Quipper-M. Unlike its parent Quipper, this language is type-safe and has a formal denotational and operational semantics. Proto-Quipper-M is also more general than Quipper, in that it can describe families of morphisms in any symmetric monoidal category, of which quantum circuits are but one example. We design Proto-Quipper-M from the ground up, by first giving a general categorical model of parameters and state. The distinction between parameters and state is also known from hardware description languages. A parameter is a value that is known at circuit generation time, whereas a state is a value that is known at circuit execution time. After finding some interesting categorical structures in the model, we then define the programming language to fit the model. We cement the connection between the language and the model by proving type safety, soundness, and adequacy properties.},
   year      = {2018},
@@ -897,6 +904,7 @@
 @incollection{Selinger2009,
   author    = {Selinger, Peter and Valiron, Beno{\^i}t},
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  crossref  = {Gay2009},
   publisher = {{Cambridge University Press}},
   title     = {Quantum {{Lambda Calculus}}},
   year      = {2009},
@@ -943,7 +951,7 @@
   address       = {{New York, NY, USA}},
   month         = feb,
   pages         = {7:1--7:10},
-  publisher     = {{ACM}},
+  publisher     = {{Association for Computing Machinery}},
   series        = {{{RWDSL2018}}},
   abstract      = {Quantum computing exploits quantum phenomena such as superposition and entanglement to realize a form of parallelism that is not available to traditional computing. It offers the potential of significant computational speed-ups in quantum chemistry, materials science, cryptography, and machine learning. The dominant approach to programming quantum computers is to provide an existing high-level language with libraries that allow for the expression of quantum programs. This approach can permit computations that are meaningless in a quantum context; prohibits succint expression of interaction between classical and quantum logic; and does not provide important constructs that are required for quantum programming. We present Q\#, a quantum-focused domain-specific language explicitly designed to correctly, clearly and completely express quantum algorithms. Q\# provides a type system; a tightly constrained environment to safely interleave classical and quantum computations; specialized syntax; symbolic code manipulation to automatically generate correct transformations of quantum operations; and powerful functional constructs which aid composition.},
   doi           = {10.1145/3183895.3183901},
@@ -993,7 +1001,7 @@
   pages     = {52--61},
   volume    = {58},
   doi       = {10.1145/2699415},
-  publisher = {{ACM}},
+  publisher = {{Association for Computing Machinery}},
   timestamp = {2021-04-18}
 }
 
@@ -1012,12 +1020,13 @@
 @incollection{Ying2009,
   author    = {Ying, Mingsheng and Duan, Runyao and Feng, Yuan and Ji, Zhengfeng},
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  crossref  = {Gay2009},
   publisher = {{Cambridge University Press}},
   title     = {Predicate {{Transformer Semantics}} of {{Quantum Programs}}},
   year      = {2009},
   month     = nov,
   address   = {{Cambridge}},
-  editor    = {Mackie, Ian and Gay, Simon},
+  editor    = {Gay, Simon and Mackie, Ian},
   isbn      = {978-0-521-51374-6},
   pages     = {311--360},
   abstract  = {AbstractThis chapter presents a systematic exposition of predicate transformer semantics for quantum programs. It is divided into two parts: The first part reviews the state transformer (forward) semantics of quantum programs according to Selinger's suggestion of representing quantum programs by superoperators and elucidates D'Hondt-Panangaden's theory of quantum weakest preconditions in detail. In the second part, we develop a quite complete predicate transformer semantics of quantum programs based on Birkhoff-von Neumann quantum logic by considering only quantum predicates expressed by projection operators. In particular, the universal conjunctivity and termination law of quantum programs are proved, and Hoare's induction rule is established in the quantum setting.8.1 IntroductionIn the mid-1990s Shor and Grover discovered, respectively, the famous quantum factoring and searching algorithms. Their discoveries indicated that in principle quantum computers offer a way to accomplish certain computational tasks much more efficiently than classical computers, and thus stimulated an intensive investigation in quantum computation. Since then a substantial effort has been made to develop the theory of quantum computation, to find new quantum algorithms, and to exploit the physical techniques needed in building functional quantum computers, including in particular fault tolerance techniques.Currently, quantum algorithms are expressed mainly at the very low level of quantum circuits. In the history of classical computation, however, it was realized long time ago that programming languages provide a technique that allows us to think about a problem that we intend to solve in a high-level, conceptual way, rather than the details of implementation.},
