Add Bettina's thesis

--- a/bbt.bib
+++ b/bbt.bib
@@ -440,7 +440,20 @@
   timestamp     = {2021-04-18}
 }
 
-@article{Heim2020,
+@phdthesis{Heim2020,
+  year      = {2020},
+  month     = dec,
+  author    = {Heim, Bettina},
+  size      = {202 p.},
+  language  = {en},
+  address   = {Zurich},
+  publisher = {ETH Zurich},
+  doi       = {10.3929/ethz-b-000468201},
+  title     = {Development of Quantum Applications},
+  school    = {ETH Zurich}
+}
+
+@article{Heim2020a,
   author    = {Heim, Bettina and Soeken, Mathias and Marshall, Sarah and Granade, Chris and Roetteler, Martin and Geller, Alan and Troyer, Matthias and Svore, Krysta},
   journal   = {Nature Reviews Physics},
   title     = {Quantum Programming Languages},
@@ -453,6 +466,8 @@
   copyright = {2020 Springer Nature Limited},
   doi       = {10.1038/s42254-020-00245-7},
   publisher = {{Nature Publishing Group}},
+  note      = {Content overlap with Ch. 6--7 of \cite{Heim2020}},
+  url       = {https://github.com/msr-quarc/quantum-languages-review},
   timestamp = {2021-04-18}
 }
 
@@ -959,6 +974,7 @@
   shorttitle    = {Q\#},
   eprint        = {1803.00652},
   archiveprefix = {arxiv},
+  note          = {See also Ch. 8 of \cite{Heim2020}},
   timestamp     = {2021-04-18}
 }
 
