--- a/bbt.bib
+++ b/bbt.bib
@@ -252,7 +252,7 @@
   timestamp  = {2021-04-18}
 }
 
-@misc{Cross2017,
+@unpublished{Cross2017,
   author        = {Cross, Andrew W. and Bishop, Lev S. and Smolin, John A. and Gambetta, Jay M.},
   title         = {Open {{Quantum Assembly Language}}},
   month         = jul,
@@ -932,7 +932,7 @@
   url       = {https://www.mscs.dal.ca/~selinger/papers/qlambdabook.pdf}
 }
 
-@misc{Smith2016,
+@unpublished{Smith2016,
   author        = {Smith, Robert S. and Curtis, Michael J. and Zeng, William J.},
   title         = {A {{Practical Quantum Instruction Set Architecture}}},
   month         = aug,
@@ -1021,7 +1021,7 @@
   timestamp = {2021-04-18}
 }
 
-@misc{Wecker2014,
+@unpublished{Wecker2014,
   author        = {Wecker, Dave and Svore, Krysta M.},
   title         = {{{LIQUi}}|{$>$}: {{A Software Design Architecture}} and {{Domain}}-{{Specific Language}} for {{Quantum Computing}}},
   abstract      = {Languages, compilers, and computer-aided design tools will be essential for scalable quantum computing, which promises an exponential leap in our ability to execute complex tasks. LIQUi|> is a modular software architecture designed to control quantum hardware. It enables easy programming, compilation, and simulation of quantum algorithms and circuits, and is independent of a specific quantum architecture. LIQUi|> contains an embedded, domain-specific language designed for programming quantum algorithms, with F# as the host language. It also allows the extraction of a circuit data structure that can be used for optimization, rendering, or translation. The circuit can also be exported to external hardware and software environments. Two different simulation environments are available to the user which allow a trade-off between number of qubits and class of operations. LIQUi|> has been implemented on a wide range of runtimes as back-ends with a single user front-end. We describe the significant components of the design architecture and how to express any given quantum algorithm.},
@@ -1082,7 +1082,7 @@
   timestamp = {2021-04-18}
 }
 
-@misc{Ying2014,
+@unpublished{Ying2014,
   author        = {Ying, Mingsheng and Yu, Nengkun and Feng, Yuan},
   title         = {Alternation in {{Quantum Programming}}: {{From Superposition}} of {{Data}} to {{Superposition}} of {{Programs}}},
   month         = feb,
