--- a/bbt.bib
+++ b/bbt.bib
@@ -252,7 +252,7 @@
   timestamp  = {2021-04-18}
 }
 
-@unpublished{Cross2017,
+@misc{Cross2017,
   author        = {Cross, Andrew W. and Bishop, Lev S. and Smolin, John A. and Gambetta, Jay M.},
   title         = {Open {{Quantum Assembly Language}}},
   month         = jul,
@@ -260,6 +260,7 @@
   abstract      = {This document describes a quantum assembly language (QASM) called OpenQASM that is used to implement experiments with low depth quantum circuits. OpenQASM represents universal physical circuits over the CNOT plus SU(2) basis with straight-line code that includes measurement, reset, fast feedback, and gate subroutines. The simple text language can be written by hand or by higher level tools and may be executed on the IBM Q Experience.},
   eprint        = {1707.03429},
   archiveprefix = {arxiv},
+  note          = {OpenQASM 2.0},
   timestamp     = {2021-04-18},
   url           = {https://github.com/Qiskit/openqasm/tree/OpenQASM2.x}
 }
@@ -444,6 +445,9 @@
   year      = {2020},
   month     = dec,
   author    = {Heim, Bettina},
+  abstract  = {The aim of this thesis is to identify practical applications where quantum computing could have an advantage over what is achievable with conventional means of computing, and what advances are needed in order to actualize that potential.
+  We investigate the possibilities on both quantum annealing devices (analogue quantum computers) as well as on gate-based devices (digital quantum computers). Quantum annealing devices in particular have grown in size and capabilities over the last decade. While they are natural candidates for providing improved solvers for NP-complete optimization problems, the number of qubits, accuracies and available couplings are still limited and their aptitude has yet to be confirmed. We use Monte Carlo methods and conceive an adaptive annealing schedule to assess the options to leverage them for the construction of satisfiability filters. We furthermore investigate their prospective as heuristic solvers for the traveling salesman problem, and what future enhancements in terms of geometries and couplings would be beneficial for that. Based on our simulations there is no reason to expect any benefits to leveraging analogue quantum computers over state-of-the-art classical methods. However, we see an implementation of annealing schemes on future digital devices as a promising approach that doesn’t suffer from the same issues that impede performance on analogue devises. To that effect, we construct and implement an efficient quantization of the Metropolis-Hastings algorithm. Opposed to following the common way of quantization à la Szegedy that is usually defined with respect to an oracle, we reformulate the walk to closely mimic the classical algorithm and thus circumvent having to rely on costly quantum arithmetics. Our proposed realization thereby can lead to substantial savings. While theoretical arguments promise a quadratic speedup in the asymptotic limit, we numerically confirm that a polynomial speedup in terms of minimal total time to solution can be achieved for pragmatic use. We explore the prospects of using quantum walks in a heuristic setting and estimate the gate times the would be required to outperform a classical supercomputer.
+  Finally, we elaborate on the role of programming languages, and how software tools can accelerate the advancement of the field. We discuss unique aspects of quantum programming and the purpose of Q# in particular, and conclude by highlighting what developments are needed for quantum computing to live up to its potential.},
   size      = {202 p.},
   language  = {en},
   address   = {Zurich},
@@ -932,7 +936,7 @@
   url       = {https://www.mscs.dal.ca/~selinger/papers/qlambdabook.pdf}
 }
 
-@unpublished{Smith2016,
+@misc{Smith2016,
   author        = {Smith, Robert S. and Curtis, Michael J. and Zeng, William J.},
   title         = {A {{Practical Quantum Instruction Set Architecture}}},
   month         = aug,
@@ -1021,16 +1025,16 @@
   timestamp = {2021-04-18}
 }
 
-@unpublished{Wecker2014,
+@misc{Wecker2014,
   author        = {Wecker, Dave and Svore, Krysta M.},
-  title         = {{{LIQUi}}|{$>$}: {{A Software Design Architecture}} and {{Domain}}-{{Specific Language}} for {{Quantum Computing}}},
+  title         = {{{LIQ}}$Ui|>$: {{A Software Design Architecture}} and {{Domain}}-{{Specific Language}} for {{Quantum Computing}}},
   abstract      = {Languages, compilers, and computer-aided design tools will be essential for scalable quantum computing, which promises an exponential leap in our ability to execute complex tasks. LIQUi|> is a modular software architecture designed to control quantum hardware. It enables easy programming, compilation, and simulation of quantum algorithms and circuits, and is independent of a specific quantum architecture. LIQUi|> contains an embedded, domain-specific language designed for programming quantum algorithms, with F# as the host language. It also allows the extraction of a circuit data structure that can be used for optimization, rendering, or translation. The circuit can also be exported to external hardware and software environments. Two different simulation environments are available to the user which allow a trade-off between number of qubits and class of operations. LIQUi|> has been implemented on a wide range of runtimes as back-ends with a single user front-end. We describe the significant components of the design architecture and how to express any given quantum algorithm.},
   year          = {2014},
   month         = feb,
+  note          = {Pronounced "Liquid"},
   eprint        = {1402.4467},
   timestamp     = {2021-04-18},
-  archiveprefix = {arxiv},
-  eprint        = {1402.4467}
+  archiveprefix = {arxiv}
 }
 
 @incollection{Ying2009,
@@ -1082,7 +1086,7 @@
   timestamp = {2021-04-18}
 }
 
-@unpublished{Ying2014,
+@misc{Ying2014,
   author        = {Ying, Mingsheng and Yu, Nengkun and Feng, Yuan},
   title         = {Alternation in {{Quantum Programming}}: {{From Superposition}} of {{Data}} to {{Superposition}} of {{Programs}}},
   month         = feb,
